<resources>
    <string name="app_name">Сборник</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_contents">Содержание</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_random_song">Случайная песня</string>
    <string name="menu_remarks">Обозначения</string>
    <string name="menu_about">О программе</string>
    <string name="title_activity_contents">ContentsActivity</string>
    <string name="search_hint">Поиск</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="KeyWordsInAuthtorsText">
        <item>Слова и музыка:</item>
        <item>Музыка:</item>
        <item>Слова:</item>
        <item>Слова и музыка припева:</item>
    </string-array>
    <string-array name="KeyWordsInSongsText">
        <item>Пр.:</item>
        <item>Пр.</item>
        <item>Пр.1:</item>
        <item>Пр.2:</item>
        <item>Пр.2</item>
        <item>Пр.3:</item>
        <item>Bridge:</item>
        <item>Bridge</item>
        <item>Bridge 1:</item>
        <item>Bridge 1</item>
        <item>Bridge 2:</item>
        <item>Bridge 3:</item>
        <item>End:</item>
        <item>Куп.</item>
        <item>1куп.</item>
        <item>2куп.</item>
        <item>Intro:</item>
    </string-array>
    <string-array name="Theme_Church">
        <item>Единство верующих</item>
        <item>Причастие</item>
        <item>Церковь</item>
    </string-array>
    <!-- Text Size -->
    <string-array name="textSizesTitles" >
        <item>Маленький</item>
        <item>Средний</item>
        <item>Большой</item>
    </string-array>
    <string-array name="textSizesValues" >
        <item>s</item>
        <item>m</item>
        <item>l</item>
    </string-array>
    <string name="textSizesDefault">m</string>
    <string name="searchSuggestion">Вы можете искать по номеру, названию или любому слову из песни.</string>
    <string name="searchEmptyResult">Что-то ничего нет...</string>
    <string name="searchEasterEggPopup">Зачем нажимать так много раз???</string>
    <string name="searchEasterEggPopup2">Займись лучше чем-нибудь полезным...</string>
    <string name="searchEasterEggPopup3">Глупость привязалась к сердцу юноши, но исправительная розга удалит ее от него.(Притчи 22:15)</string>
    <string name="chordsDownloadTitle">Загрузить аккорды?</string>
    <string name="chordsDownloadDesc">Для отображения аккордов необходимо скачать их. Нажмите "Да", если вы согласны сделать это прямо сейчас (объем файлов ~100 МБ)</string>
    <string name="pdfChordsUrl">http://xn--41-flcwjireb0ahw.xn--p1ai/</string>
    <string name="pdfChordsFileName">NewChords.zip</string>
    <string name="pdfChordsDownloadingTitle">Загрузка</string>
    <string name="pdfChordsExtractingTitle">Распаковка</string>
    <string name="pdfChordsExtractingFailed">Что-то пошло не так :(</string>
    <string name="pdfChordsControlQuantity">320</string>
</resources>
