<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/menu_favorite"
        android:title="@string/menu_favorite"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_remarks"
        android:title="@string/menu_remarks"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
